# ask-ahmed

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  install.sh
configs/: copy.sh  thunar.xml
src/: ask-ahmed.desktop  gui.rs  main.rs  oldinw.rs  tui.rs  util.rs
testfiles/: bad_forkbomb.bat
wix/: License.rtf  main.wxs
