[package]
name = "ask-ahmed"
version = "1.0.0"
edition = "2024"
license = "MIT"
authors = ["Tymon Wilczek <tymon.wilczek@gmail.com>"]

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
# native-windows-derive = "1.0.5"
# native-windows-gui = "1.0.13"
reqwest = { version = "0.12.20", default-features = false, features = [
    "blocking",
    "charset",
    "http2",
    "multipart",
    "native-tls",
    "stream",
    "system-proxy"
]}
gtk4 = "0.9.6"
rust-ini = "0.21.1"
serde_json = "1.0.140"
glib = "0.20.10"
rascii_art = "0.4.5"
# winapi = "0.3"

[build-dependencies]
embed-manifest = "1.4.0"
windows_exe_info = "0.5.2"
